--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@ async function getDuolingoStats() {
 
     try {
         let response = await fetch(url);
-        let text = await response.text();
+        let text = await response.text(); // Get raw HTML response
 
-        // Extract streak from the page using regex (since it's HTML)
+        // Extract streak using regex
         let streakMatch = text.match(/🔥 (\d+) day streak/);
         let streak = streakMatch ? streakMatch[1] : "N/A";
 
         document.getElementById("streak").innerText = streak;
-        document.getElementById("xp").innerText = "XP data not available";
+        document.getElementById("xp").innerText = "XP data not available"; // XP needs manual scraping
+
     } catch (error) {
         console.error("Failed to fetch Duolingo stats:", error);
         document.getElementById("streak").innerText = "Error";
@@ -56,6 +57,7 @@ async function getDuolingoStats() {
 }
 
 getDuolingoStats();
+
 
     </script>
 </body>
