--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <script>
 async function getDuolingoStats() {
-    let username = "YOUR_USERNAME"; // Replace with your Duolingo username
+    let username = "B2m76knq"; // Replace with your Duolingo username
     let url = `https://duome.eu/${username}/progress`;
 
     try {
