--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
         }
     }
 
-    fetchDuolingoStats("YOUR_USERNAME"); // Replace with your Duolingo username
+    fetchDuolingoStats("B2m76knq"); // Replace with your Duolingo username
 </script>
